# SednaDBXML

./: .gitignore  README  SednaDB.cabal  Setup.hs  groups  project.config  sednaDBXML.cabal  testbuild.sh
Database/SednaDB/: Sedna.hsc
SednaDB/Database/Sedna/: Sedna.hsc
Test/: SednaTests.hs
Test/Integration/: BindingWrappers.hs  SednaBindingTests.hs
src/Database/: Sedna.hs  SednaBindings.hs  SednaExceptions.hs  SednaTypes.hs
src/Database/Internal/: SednaCBindings.hsc  SednaConnectionAttributes.hsc  SednaResponseCodes.hsc  SpDefs.hsc
src/Database/SednaDB/: Connection.hs  Sedna.hs  Sedna.hsc  SednaBindings.hs  SednaExceptions.hs  SednaTypes.hs  SpDefs.hsc
src/Database/SednaDB/Internal/: BindingWrappers.hs  Sedna.hsc  SednaBindingWrappers.hs  SednaBindings.hs  SednaBindings.hsc  SednaCBindings.hsc  SednaConnectionAttributes.hsc  SednaExceptions.hs  SednaResponseCodes.hsc  SpDefs.hsc
test/: runTests.sh  sedna-testsuite.cabal
test/fixtures/: baseballleague.xml
test/integration/: BindingWrappers.hs  Sedna.hs
test/intergration/: BindingWrappers.hs
test/suite/: TestSuite.hs
test/suite/Integration/: SednaBindingTests.hs
test/suite/integration/: SednaBindingTests.hs
