Name:                   SednaDB
Version:                0.0.0
License:                GPL-3
Cabal-Version:          >= 1.10.0
License-File:           LICENSE
Author:                 Eric C. Jones
Build-Type:             Simple
Maintainer:             ecjones@gmail.com
Stability:              alpha
Synopsis:               Sedna Native XML Binding

Description:            Sedna is a free native XML database which
                        provides a full range of core database
                        services - persistent storage, ACID
                        transactions, security, indices, hot
                        backup. Flexible XML processing facilities
                        include W3C XQuery implementation, tight
                        integration of XQuery with full-text search
                        facilities and a node-level update
                        language. This package provides a clean,
                        sensible monadic interface to the underlying C
                        library.

                        Sedna Home Page:
                        http://www.sedna.org/

Category:               Database
Library
  Hs-Source-Dirs:         src
  Default-Language:       Haskell98
  Build-Depends:          base == 4.*,
                          bindings-DSL,
                          bytestring,
                          containers,
                          iteratee >= 0.8,
                          mtl

  Exposed-Modules:        Database.SednaDB.SednaBindings
                          Database.SednaDB.SednaExceptions
                          Database.SednaDB.SednaTypes
                          Database.SednaDB.Internal.SednaBindingWrappers
                          Database.SednaDB.Internal.SednaCBindings
                          Database.SednaDB.Internal.SednaConnectionAttributes
                          Database.SednaDB.Internal.SednaResponseCodes
                          Database.SednaDB.Internal.SpDefs

  Include-Dirs:           /usr/local/sedna/driver/c
  Includes:               libsedna.h,
                          sp_defs.h

  Ghc-Options:            -Wall

  Default-Extensions:     CPP,
                          ForeignFunctionInterface

Source-Repository Head
    type:                 git
    location:             git@github.com:ExternalReality/SednaDBXML.git
